# jxl-rs-polyfill

./: .gitignore  LICENSE  README.md  demo.sh  package-lock.json  package.json  publish.sh
crate/: Cargo.toml
crate/src/: lib.rs
sampler/: index.html
scripts/: build-wasm-local.sh  build-wasm.sh  bundle.js
src/: auto-lite.js  auto.d.ts  jxl-polyfill.d.ts  jxl-polyfill.js  polyfill-core.js  worker.js
