[package]
name = "jxl-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
jxl = { git = "https://github.com/libjxl/jxl-rs" }
console_error_panic_hook = "0.1.7"
# For static PNG encoding
image = { version = "0.24", default-features = false, features = ["png"] }
# For APNG (animated PNG) encoding
png = "0.17"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
